--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
-    "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^2.6.4",
     "gulp.spritesmith": "^6.9.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "vinyl-ftp": "^0.6.1"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
